--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #c4c4c4;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #282c34;
+  margin-bottom: 20px;
 }
 
 .App-body{
-  background-color: #282c34;
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
